Regression: Sculpt mode strength Falloff Overlay not visible #100350

Closed
opened 2022-08-11 18:20:50 +02:00 by Helge Maus · 9 comments

System Information
Operating system: macOS-12.5-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101

Blender Version
Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-11 12:51, hash: 0a096f2be2
Worked: worked in Blender 3.2.2
Caused by 5c0d18f682

Short description of error
I don't see the strength falloff overlay anymore when pressing Shift-F.
see screenshot

Exact steps for others to reproduce the error
Start Blender with Sculpting template
Press Shift-F over the default Quad Sphere
only Strength Rings are visible, but not the greyish Falloff overlays

**System Information** Operating system: macOS-12.5-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101 **Blender Version** Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-11 12:51, hash: `0a096f2be2` Worked: worked in Blender 3.2.2 Caused by 5c0d18f682 **Short description of error** I don't see the strength falloff overlay anymore when pressing Shift-F. see screenshot **Exact steps for others to reproduce the error** Start Blender with Sculpting template Press Shift-F over the default Quad Sphere only Strength Rings are visible, but not the greyish Falloff overlays
Author

Added subscriber: @pixeltrain3d

Added subscriber: @pixeltrain3d
Author

Bildschirmfoto 2022-08-11 um 18.17.19.png

in Blender 3.2.2 it works:
Bildschirmfoto 2022-08-11 um 18.21.53.png

![Bildschirmfoto 2022-08-11 um 18.17.19.png](https://archive.blender.org/developer/F13364857/Bildschirmfoto_2022-08-11_um_18.17.19.png) in Blender 3.2.2 it works: ![Bildschirmfoto 2022-08-11 um 18.21.53.png](https://archive.blender.org/developer/F13364863/Bildschirmfoto_2022-08-11_um_18.21.53.png)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can reproduce it in current master. I'll check

Thanks for the report. I can reproduce it in current master. I'll check
Pratik Borhade changed title from Sculpting - Strength Falloff Overlay not visible to Regression: Sculpt mode strength Falloff Overlay not visible 2022-08-12 07:00:23 +02:00
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

First bad commit: 5c0d18f682
cc @brecht ^

First bad commit: 5c0d18f682 cc @brecht ^

This issue was referenced by 4d2e2a6691

This issue was referenced by 4d2e2a66912fc22f6092492b1450a5c110d1949d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-08-12 13:47:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100350
No description provided.