Fix T100350: missing brush falloff preview in sculpt mode